--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-phone-number-input": "^3.3.10",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "uuid": "^9.0.1"
