--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-js": "^3.3.0",
     "firebase": "^10.10.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
